--- a/trello-clone-api/package.json
+++ b/trello-clone-api/package.json
@@ -1,8 +1,10 @@
 {
   "name": "trello-clone-api",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
+    "build": "tsc",
+    "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn index.ts"
   },
   "keywords": [],
