--- a/trello-clone-api/package.json
+++ b/trello-clone-api/package.json
@@ -4,7 +4,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "ts-node index.ts",
     "dev": "ts-node-dev --respawn index.ts"
   },
   "keywords": [],
