--- a/trello-clone-api/package.json
+++ b/trello-clone-api/package.json
@@ -1,25 +1,26 @@
 {
   "name": "trello-clone-api",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "index.js",
   "scripts": {
-    "build": "npm rebuild sqlite3 && tsc",
-    "start": "ts-node index.ts",
-    "dev": "ts-node-dev --respawn index.ts",
-    "postinstall": "npm rebuild sqlite3"
+    "dev": "ts-node-dev --respawn index.ts"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "sqlite3": "^5.1.7",
-    "typeorm": "^0.3.25",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "typeorm": "^0.3.25"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
-    "@types/node": "^24.0.15",
-    "ts-node-dev": "^2.0.0"
+    "@types/node": "^24.0.13",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.8.3"
   }
 }
